--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat-typescript-sandbox",
+  "name": "hardhat-typescript-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
     "hardhat": "hardhat",
     "scripts": "hardhat run",
     "coverage": "hardhat coverage",
-    "postinstall": "patch-package && npm run build",
     "semantic-release": "semantic-release",
     "commit": "cz"
   },
@@ -27,58 +26,58 @@
     "/typechain/**/*.js",
     "CHANGELOG.md"
   ],
-  "author": "Derek Barrera <me@derekbarrera.com> (derekbarrera.com)",
+  "author": "Son Tung <stephen@xantus.network>",
   "license": "ISC",
+  "dependencies": {
+    "@atixlabs/hardhat-time-n-mine": "^0.0.5",
+    "ethereumjs-util": "^7.1.5",
+    "hardhat": "^2.9.9",
+    "prettier": "^2.7.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "web3-eth-abi": "^1.7.3"
+  },
   "devDependencies": {
-    "@defi-wonderland/smock": "^2.0.7",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^2.1.2",
-    "@nomiclabs/hardhat-solhint": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^4.3.0",
-    "@openzeppelin/contracts-upgradeable": "^4.0.0",
-    "@openzeppelin/hardhat-upgrades": "1.6.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@swc/core": "^1.2.97",
-    "@swc/helpers": "^0.2.13",
-    "@tenderly/hardhat-tenderly": "^1.0.13",
-    "@typechain/ethers-v5": "^8.0.3",
-    "@typechain/hardhat": "^2.3.0",
-    "@types/chai": "^4.2.14",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/faker": "^5.5.9",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.7",
-    "@uniswap/v3-core": "^1.0.0",
-    "@uniswap/v3-periphery": "^1.0.0",
-    "chai": "^4.2.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
+    "@openzeppelin/hardhat-upgrades": "^1.18.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@tenderly/hardhat-tenderly": "^1.0.15",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.0",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.43",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
-    "conventional-changelog-conventionalcommits": "^4.6.0",
-    "cz-conventional-changelog": "3.3.0",
-    "dotenv": "^8.2.0",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.5.1",
-    "faker": "^5.5.3",
-    "hardhat-deploy": "^0.9.10",
-    "hardhat-deploy-ethers": "^0.3.0-beta.11",
-    "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-packager": "^1.2.1",
-    "mocha-chai-jest-snapshot": "^1.1.1",
-    "semantic-release": "^17.4.5",
-    "solhint": "^3.2.1",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "ethers": "^5.6.8",
+    "faker": "^6.6.6",
+    "hardhat-deploy": "^0.11.10",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-packager": "^1.4.1",
+    "mocha-chai-jest-snapshot": "^1.1.4",
+    "semantic-release": "^19.0.3",
+    "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
-    "ts-node": "^9.0.0",
-    "typechain": "^6.0.3",
-    "typescript": "^4.0.5"
-  },
-  "dependencies": {
-    "@atixlabs/hardhat-time-n-mine": "0.0.5",
-    "@uniswap/v3-sdk": "^1.0.0-alpha.8",
-    "ethereumjs-util": "^7.1.3",
-    "hardhat": "^2.6.7",
-    "web3-eth-abi": "^1.6.0"
+    "solidity-coverage": "^0.7.21",
+    "ts-node": "^10.8.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.3"
   }
 }
