--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "scripts": "hardhat run",
     "coverage": "hardhat coverage",
     "semantic-release": "semantic-release",
-    "commit": "cz"
+    "lint": "npx solhint contracts/*.sol && npx eslint .",
+    "format": "prettier --check \"contracts/**/*.sol\" \"**/*.ts\"",
+    "format-fix": "prettier --write \"contracts/**/*.sol\" \"**/*.ts\""
   },
   "private": true,
   "publishConfig": {
@@ -37,6 +39,8 @@
     "web3-eth-abi": "^1.7.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
@@ -57,8 +61,6 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
-    "conventional-changelog-conventionalcommits": "^5.0.0",
-    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
